--- a/app/src/main/res/layout/adapter_notices.xml
+++ b/app/src/main/res/layout/adapter_notices.xml
@@ -26,6 +26,7 @@
             android:id="@+id/tvAtualizacao"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginBottom="8sp"
             android:text="TextView"
             android:textSize="12sp" />
     </LinearLayout>
